also omit LTO on riscv64-linux-gnu

--- a/Dockerfile-linux.template
+++ b/Dockerfile-linux.template
@@ -183,7 +183,7 @@ RUN set -eux; \
 	# skip LTO on alpine on riscv64: https://github.com/docker-library/python/pull/935, https://github.com/docker-library/python/pull/1038
 	if rcVersion == "3.9" then "" else (
 -}}
-		$(test "$gnuArch" != 'riscv64-linux-musl' && echo '--with-lto') \
+		$(test "$gnuArch" != 'riscv64-linux-gnu' -a "$gnuArch" != 'riscv64-linux-musl' && echo '--with-lto') \
 {{ ) end -}}
 		--with-ensurepip \
 	; \
